# effpee

./: .ghci  .gitignore  .hlint.yaml  .stylish-haskell.yaml  Gemfile  PLAN.org  README.org  effpee.cabal  gemset.nix  nixpkgs.nix  package.nix  shell.nix  version.nix
etc/: CONDUCT.org  LICENSE-AGPLv3.txt
exe/http-simple/: Main.hs
exe/streaming/: Main.hs
exe/streaming/Effpee/Streaming/: Exercises.hs  JSON.hs
reference/: Pets.hs  hello.cabal
ruby/apps/: simple-http.rb
src/: Effpee.hs
src/Effpee/: ADT.hs  AlternativeExample.hs  Alternatives.hs  BindVersusLetVersusWhere.hs  Cards.hs  Church.hs  Covariance.hs  Crap.hs  Debug.hs  Deferred.hs  FizzBuzz.hs  Functor.hs  Many.hs  NonEmpty.hs  Option.hs  Or.hs  Pair.hs  Predicate.hs  State.hs  Stream.hs  Suit.hs  USMoney.hs  Validation.hs  Validation_flymake.hs
src/Effpee/Algebraic/: Set.hs
src/Effpee/Composition/: Arrows.hs  Functions.hs  IndependentEffects.hs
src/Effpee/FizzBuzz/: Predicate.hs
src/Effpee/HTTP/: Simple.hs
src/Effpee/Transforms/: Pipeline.hs  Story.hs
test/: TastyLoader.hs
test/Effpee/: ADTTest.hs  CardsTest.hs  DeferredTest.hs  FunctorTest.hs  ManyTest.hs  NonEmptyTest.hs  OptionTest.hs  OrTest.hs  PairTest.hs  PredicateTest.hs  StreamTest.hs  Test.hs  USMoneyTest.hs
test/Effpee/Algebraic/: RoleTest.hs
